--- a/index.html
+++ b/index.html
@@ -5,22 +5,55 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css">
   
   <title>Frontend Mentor | Calculator app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
-<body>
+<body class="theme-1">
+  <main>
+    <section class="calc-top">
+      <h1 id="app-name">calc</h1>
+      <div id="theme-container">
+        <label for="theme-slider" class="theme-header">Theme</label>
+        <div class="slider-container">
+          <datalist id="theme-num">
+            <option value="1" label="1"></option>
+            <option value="2" label="2"></option>
+            <option value="3" label="3"></option>
+          </datalist>
+          <input type="range" id="theme-slider" class="theme-slider" name="theme-slider" value="0" list="theme-num" min="0" max="2">
+        </div>
+      </div>
+    </section>
+    <div id="calc-screen">
+      <p id="screen-text">314,923</p>
+    </div>
+    <div class="calc-keypad">
+      <input type="button" class="button-3 key" value="7">
+      <input type="button" class="button-3 key" value="8">
+      <input type="button" class="button-3 key" value="9">
+      <input type="button" class="button-1 key word" value="del">
+      <input type="button" class="button-3 key" value="4">
+      <input type="button" class="button-3 key" value="5">
+      <input type="button" class="button-3 key" value="6">
+      <input type="button" class="button-3 key" value="+">
+      <input type="button" class="button-3 key" value="1">
+      <input type="button" class="button-3 key" value="2">
+      <input type="button" class="button-3 key" value="3">
+      <input type="button" class="button-3 key" value="-">
+      <input type="button" class="button-3 key" value=".">
+      <input type="button" class="button-3 key" value="0">
+      <input type="button" class="button-3 key" value="/">
+      <input type="button" class="button-3 key no-transform" value="x">
+      <input type="button" class="button-1 key word last-row" value="reset">
+      <input type="button" class="button-2 key last-row" value="=">
+    </div>
+  </main>
 
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+  <script src="./js/script.js"></script>
 </body>
 </html>
