Added themes & printing to calculator screen
- theme changes depending on the range slider value
- if the user's browser has colour scheme preference, page will automatically change to the corresponding theme
- if window is refreshed, the page will remain on the last theme that was selected by the user
- screen text changes based on user input (calculation of answers is not yet functional)

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
         <label for="theme-slider" class="theme-header">Theme</label>
         <div class="slider-container">
           <datalist id="theme-num">
-            <option value="1" label="1"></option>
-            <option value="2" label="2"></option>
-            <option value="3" label="3"></option>
+            <option value="0" label="1"></option>
+            <option value="1" label="2"></option>
+            <option value="2" label="3"></option>
           </datalist>
           <input type="range" id="theme-slider" class="theme-slider" name="theme-slider" value="0" list="theme-num" min="0" max="2">
         </div>
       </div>
     </section>
     <div id="calc-screen">
-      <p id="screen-text">314,923</p>
+      <p id="screen-text"></p>
     </div>
     <div class="calc-keypad">
       <input type="button" class="button-3 key" value="7">
