Theme Slider Styled and Error Recognition added
- theme slider styled for Chrome, Firefox and IE
- app now has "invalid input" pop up if the user tries to enter some combination of operations

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
       <input type="button" class="button-1 key word last-row" value="reset">
       <input type="button" class="button-2 key last-row" value="=">
     </div>
+    <div class="error-notice hidden">
+      <p>Invalid Input</p>
+    </div>
   </main>
 
   <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
